--- a/src/Shared/GlobalStyle/style.scss
+++ b/src/Shared/GlobalStyle/style.scss
@@ -1,12 +1,11 @@
-$blue1 : #0019FF;
+$blue1 : #0c1671;
 $blue2 : #2F74FF;
+$blue2-l: #96b8fb;
 $blue3 : #7ba7fe;
+
 *{
     margin: 0px;
     padding: 0px;
     @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Rubik+Mono+One&display=swap');
     font-family: "Rubik Mono One", monospace;
 }
-
-
-  
