Обновление кнопок в коде

--- a/src/Shared/GlobalStyle/style.scss
+++ b/src/Shared/GlobalStyle/style.scss
@@ -2,6 +2,8 @@ $blue1 : #0c1671;
 $blue2 : #2F74FF;
 $blue2-l: #96b8fb;
 $blue3 : #7ba7fe;
+$delete : rgb(255, 104, 104);
+$deleteHover : rgb(255, 78, 78);
 
 *{
     margin: 0px;
