--- a/src/Widgets/CreateStorageForm/UI/CreateStorageForm.module.scss
+++ b/src/Widgets/CreateStorageForm/UI/CreateStorageForm.module.scss
@@ -89,3 +89,33 @@
         }
     }
 }
+
+.errorPush{
+    position: absolute;
+    top: calc(120px);
+    right: calc(50% - calc(350px \ 2px));
+    background-color: rgb(255, 175, 175);
+    height: 100px;
+    width: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #333;
+    border-radius: 10px;
+    z-index: 5;
+}
+
+.donePush{
+    position: absolute;
+    top: calc(120px);
+    right: calc(50% - calc(350px \ 2px));
+    background-color: rgb(211, 255, 175);
+    height: 100px;
+    width: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #333;
+    border-radius: 10px;
+    z-index: 5;
+}
