--- a/src/Pages/LoginPage/UI/LoginPage.module.scss
+++ b/src/Pages/LoginPage/UI/LoginPage.module.scss
@@ -71,6 +71,21 @@
     cursor: pointer;
 }
 
+.errorPopap{
+    position: absolute;
+    top: 20%;
+    left: calc(50% - 150px);
+    width: 300px;
+    height: 50px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #333;
+    font-size: 20px;
+    background-color: rgb(255, 87, 87);
+}
+
 @media (max-width: 600px) {
     .loginSection {
         width: 300px;
