--- a/src/Widgets/ItemStorage/ViewItemStorage/UI/ViewItemStorage.module.scss
+++ b/src/Widgets/ItemStorage/ViewItemStorage/UI/ViewItemStorage.module.scss
@@ -44,7 +44,7 @@
     margin-bottom: 50px;
     overflow:scroll;
     width: 1000px;
-    border: 3px solid black;
+    // border: 3px solid black;
     border-radius: 10px;
     display: flex;
     gap: 20px;
