--- a/src/Widgets/Deliveries/DeliveriItem/UI/DiliveriItemStyle.module.scss
+++ b/src/Widgets/Deliveries/DeliveriItem/UI/DiliveriItemStyle.module.scss
@@ -24,15 +24,14 @@
     margin-bottom: 16px;
 }
 
-.deliveriItem__info__leftBlock {
-    color: style.$blue1;
-    font-weight: bold;
-}
-
 .deliveriItem__info__rigthBlock {
     color: style.$blue1;
     font-weight: bold;
     text-align: right;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
 }
 
 .deliveriItem__buttons {
