--- a/src/App/StorageInfo/UI/StorageInfo.module.scss
+++ b/src/App/StorageInfo/UI/StorageInfo.module.scss
@@ -73,22 +73,6 @@
         border-bottom: 9px solid color.$blue1;
         padding: 10px 150px;
         font-size: 24px;
-
-        .viewItems{
-
-        }
-
-        .viewCars{
-
-        }
-
-        .addItems{
-
-        }
-
-        .addCars{
-
-        }
         
         .link{
             text-decoration: none;
@@ -99,5 +83,40 @@
             border-bottom: 4px solid white;
             color: color.$blue1;
         }
+    }
+}
+
+.errorDelete{
+    width: 400px;
+    height: 100px;
+    position: absolute;
+    top: calc(50% - 50px);
+    left: calc(50% - 200px);
+    background-color: white;
+    border-bottom: 2px solid black;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .title{
+        font-size: 20px;
+        // color: red;
+        padding: 20px 0px;
+        text-align: center;
+    }
+    .close{
+        width: 150px;
+        padding: 5px;
+        border-radius: 10px;
+        border: 3px solid black;
+        background-color: rgb(255, 123, 123);
+        color: white;
+        font-size: 20px;
+    }
+    .close:hover{
+        background-color: #000;
     }
 }
